[gd_scene load_steps=3 format=3 uid="uid://cgnbspnl27mhp"]

[ext_resource type="Script" uid="uid://dibvfwd6kf1tl" path="res://scenes/ui/pause_menu/pause_menu.gd" id="1_rbnsh"]
[ext_resource type="Theme" uid="uid://cdsjjdkb6w6wk" path="res://resources/themes/main_theme.tres" id="2_rbnsh"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rbnsh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="BackgroundImage" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0352941, 0.0313726, 0.0313726, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuItems" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/MenuItems"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_rbnsh")
theme_override_font_sizes/font_size = 24
text = "Cuul Game"
horizontal_alignment = 1

[node name="SaveGameButton" type="Button" parent="CenterContainer/MenuItems"]
layout_mode = 2
theme = ExtResource("2_rbnsh")
text = "Save Game"

[node name="OptionsButton" type="Button" parent="CenterContainer/MenuItems"]
layout_mode = 2
theme = ExtResource("2_rbnsh")
text = "Options"

[node name="QuitButton" type="Button" parent="CenterContainer/MenuItems"]
layout_mode = 2
theme = ExtResource("2_rbnsh")
text = "Quit"
